feat: complete Live Manager GUI with fallback URL logic and UI stretching improvements

--- a/src/data/links_config.json
+++ b/src/data/links_config.json
@@ -1,3 +1,4 @@
 {
-  "showcase:1:link": "http://localhost:5459/demo-bakkerij/"
+  "showcase:1:link": "http://localhost:5459/demo-bakkerij/",
+  "showcase:0:link": "https://athena-cms-factory.github.io/de-salon-site"
 }
